--- a/index.html
+++ b/index.html
@@ -6,6 +6,25 @@
     <link rel="shortcut icon" href="/favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+    <style>
+      body {
+        margin: 0;
+        width: 100vw;
+        height: 100vh;
+        background: linear-gradient(90deg, 
+          white 0%, white 10%, 
+          black 10%, black 20%,
+          white 20%, white 30%,
+          black 30%, black 40%,
+          white 40%, white 50%,
+          black 50%, black 60%,
+          white 60%, white 70%,
+          black 70%, black 80%,
+          white 80%, white 90%,
+          black 90%, black 100%
+        );
+      }
+    </style>
   </head>
   <body>
   </body>
